# image_editor

./: .gitignore  CMakeLists.txt
assets/: cpp_generator.py  fill.png.cpp  inverter.shader
include/: button.h  canvas.h  catmulrom.h  colors.h  common.h  config.h  dynarray.h  event.h  filter.h  interval.h  list.h  plugin.h  point.h  regions.h  rendertarget.h  scrollbar.h  string.h  tools.h  types.h  vector.h  widget.h  window.h
src/: button.cpp  canvas.cpp  catmulrom.cpp  event.cpp  filter.cpp  global_loaders.cpp  main.cpp  regions.cpp  rendertarget.cpp  tools.cpp  vector.cpp  widget.cpp  window.cpp
src/plugins/: const_fill_plugin.cpp  fill_tool.cpp  sphere_filter.cpp  trip_filter.cpp
